--- a/views/1.基本标签.html
+++ b/views/1.基本标签.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="老谢在学习前端">
 <meta name="description" content="学来学去学不懂">
 
-<title>基本标签学习</title>
+<title>基本标签学习111</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 	<!--	水平线标签-->
 	<hr/>
 <!--	字体样式标签，粗体斜体-->
-	<strong>看我粗不粗21121</strong><br/><br/>
+	<strong>看我粗不粗111</strong><br/><br/>
 	
 	
 	<!-- 这是注释 -->
