--- a/views/1.基本标签.html
+++ b/views/1.基本标签.html
@@ -6,11 +6,11 @@
 <meta name="keywords" content="老谢在学习前端">
 <meta name="description" content="学来学去学不懂">
 
-<title>基本标签学习111222</title>
+<title>基本标签学习</title>
 </head>
 
 <body>
-	<h1>第一个网aaa页 测试111</h1>
+	<h1>第一个网aaa页 测试</h1>
 	
 	<p>是大V是大V是大V是大V</p>
 	<p>这是第二段</p>
