--- a/views/css_learn/4-0.css样式1.html
+++ b/views/css_learn/4-0.css样式1.html
@@ -8,7 +8,7 @@
 
 <!--第一种嵌入方式，行内样式，在标签内用style属性来实现-->
 
-<p style="background-color: #999900">行内元素，控制段落-1</p>
+<p style="background-color: #999900;color: blue;">行内元素，控制段落-1</p>
 <h2 style="background-color: #FF6633">行内元素，h2 标题元素</h2>
 <p style="background-color: #999900">行内元素，控制段落-2</p>
 <strong style="font-size:30px;">行内元素，strong 比 em 效果要强</strong>
