--- a/views/html学习/10.测试优先级.html
+++ b/views/html学习/10.测试优先级.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="../resource/css/styles1.css" type="text/css" rel="stylesheet" />
+    <link href="../../resource/css/styles1.css" type="text/css" rel="stylesheet" />
     <style>
         p{
             color: chartreuse;
