--- a/views/html学习/4-3.测试背景图像.html
+++ b/views/html学习/4-3.测试背景图像.html
@@ -9,8 +9,8 @@
 <title>基本标签学习111222</title>
 <style>
     .class1{
-        background-image: url('../resource/images/12.jpg');
-        opacity: 1;
+        background-image: url('../../resource/images/12.jpg');
+        opacity: 6;
         filter: alpha(opacity=40);
     }
     #id1{
