--- a/views/html学习/5.表格.html
+++ b/views/html学习/5.表格.html
@@ -31,6 +31,17 @@
 		<td>3-1</td>
 
 	</tr>
+</table><br>
+
+<table border="1px">
+	<tr>
+		<td>21412</td>
+		<td>21412</td>
+		<td>21412</td>
+	</tr>
+	<tr>
+		<td>第二行</td>
+	</tr>
 </table>
 </body>
 </html>
