--- a/views/html学习/3.链接.html
+++ b/views/html学习/3.链接.html
@@ -10,7 +10,7 @@
 
 <body>
 <!-- 使用name做标记 -->
-<a name="top">我是顶部</a>
+<a name="top">我是顶部</a></br></br>
 
 
 
@@ -19,17 +19,28 @@
 target="_blank"：用这个会另起一个页面
 -->
 <a href="1.基本标签.html" target="_self">
-<img alt="图像" src="../resource/images/12.jpg" title="悬停文字" width="500" height="300"><br/>
+<img alt="图像" src="../../resource/images/12.jpg" title="悬停文字" width="500" height="300"><br/>
 </a>
 
+<a href="1.基本标签.html" target="_self">
+    <img alt="图像" src="../../resource/images/12.jpg" title="悬停文字" width="500" height="300"><br/>
+</a>
+
+<a href="1.基本标签.html" target="_self">
+    <img alt="图像" src="../../resource/images/12.jpg" title="悬停文字" width="500" height="300"><br/>
+</a>
+
+<a href="1.基本标签.html" target="_self">
+    <img alt="图像" src="../../resource/images/12.jpg" title="悬停文字" width="500" height="300"><br/>
+</a>
 
 <!-- 锚连接 
 1.需要一个标记
 2.跳转到标记
 #
 -->
-<a href="#top">点击我跳转到顶部</a><br>
-<a href="mailto:2410378066@qq.com">点击联系老谢</a>
+<a href="#top">点击我跳转到顶部</a><br></br>
+<a href="mailto:2410378066@qq.com">点击联系老谢</a></br></br>
 
 <a target="_blank" href="tencent://Message/?Uin=2410378066&amp;websiteName=local.edu.com:8888=&amp;Menu=yes">
 <img border="0" src="http://wpa.qq.com/pa?p=2:2410378066:51" alt="你好，加我QQ，心情好请你吃饭" title="你好，加我QQ，心情好请你吃饭"/>
